force-app/main/default/objects/Contact/fields/DX_Action__c.field-meta.xml
<CustomField>
    <fullName>DX_Action__c</fullName>
    <label>主要な提案Action</label>
    <type>TextArea</type>
</CustomField>