force-app/main/default/objects/Contact/fields/DX_age__c.field-meta.xml
<CustomField>
    <fullName>DX_age__c</fullName>
    <label>年齢</label>
    <length>10</length>
    <type>Text</type>
</CustomField>