force-app/main/default/objects/Contact/fields/DX_BuildAppsiryouseikyuu__c.field-meta.xml
<CustomField>
    <fullName>DX_BuildAppsiryouseikyuu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildApp資料請求フォーム流入</label>
    <type>Checkbox</type>
</CustomField>