force-app/main/default/objects/Contact/fields/DX_BuildAppsiryouseikyuusouhuzumi__c.field-meta.xml
<CustomField>
    <fullName>DX_BuildAppsiryouseikyuusouhuzumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildApp資料請求フォーム_送付済み</label>
    <type>Checkbox</type>
</CustomField>