force-app/main/default/objects/Contact/fields/DX_BusinessHistory__c.field-meta.xml
<CustomField>
    <fullName>DX_BusinessHistory__c</fullName>
    <label>業歴</label>
    <length>255</length>
    <type>Text</type>
</CustomField>