force-app/main/default/objects/Contact/fields/DX_ClientConatctDate__c.field-meta.xml
<CustomField>
    <fullName>DX_ClientConatctDate__c</fullName>
    <label>顧客コンタクト日_DX</label>
    <type>Date</type>
</CustomField>