force-app/main/default/objects/Contact/fields/DX_contact__c.field-meta.xml
<CustomField>
    <fullName>DX_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>接触済み_DX</label>
    <type>Checkbox</type>
</CustomField>