force-app/main/default/objects/Contact/fields/DX_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>DX_CreatedDate__c</fullName>
    <label>個社別管理開始日_DX</label>
    <type>DateTime</type>
</CustomField>