force-app/main/default/objects/Contact/fields/DX_DemonstrationFittings__c.field-meta.xml
<CustomField>
    <fullName>DX_DemonstrationFittings__c</fullName>
    <label>実証態度_建具_DX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>◎</fullName>
            </value>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>△</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>