force-app/main/default/objects/Contact/fields/DX_DepCategory__c.field-meta.xml
<CustomField>
    <fullName>DX_DepCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BuildApp部署カテゴリ</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>DepCategory__c.BuildAppTacTarget__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>DepCategory__c.Account_LU__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DepCategory__c</referenceTo>
    <relationshipLabel>*得意先担当者</relationshipLabel>
    <relationshipName>CT0qrR</relationshipName>
    <type>Lookup</type>
</CustomField>