force-app/main/default/objects/Contact/fields/DX_FreeText__c.field-meta.xml
<CustomField>
    <fullName>DX_FreeText__c</fullName>
    <label>自由記述</label>
    <type>TextArea</type>
</CustomField>