force-app/main/default/objects/Contact/fields/DX_Genba_1__c.field-meta.xml
<CustomField>
    <fullName>DX_Genba_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>啓蒙完了_現場決裁者</label>
    <type>Checkbox</type>
</CustomField>