force-app/main/default/objects/Contact/fields/DX_Genba_Date_0__c.field-meta.xml
<CustomField>
    <fullName>DX_Genba_Date_0__c</fullName>
    <label>パーセプションLV_決裁者_現場0_BA未認知・無関心_現場_変更日</label>
    <type>Date</type>
</CustomField>