force-app/main/default/objects/Contact/fields/DX_Genba_Date_10__c.field-meta.xml
<CustomField>
    <fullName>DX_Genba_Date_10__c</fullName>
    <label>パーセプションLV 決裁者_現場10_野原の提供するサービスを色々な物</label>
    <type>Date</type>
</CustomField>