force-app/main/default/objects/Contact/fields/DX_Genba_Date_1__c.field-meta.xml
<CustomField>
    <fullName>DX_Genba_Date_1__c</fullName>
    <label>パーセプションLV_決裁者_現場1_BAサービスを理解した_現場_変更日</label>
    <type>Date</type>
</CustomField>