force-app/main/default/objects/Contact/fields/DX_HobbiesIntentions__c.field-meta.xml
<CustomField>
    <fullName>DX_HobbiesIntentions__c</fullName>
    <label>趣味・志向</label>
    <length>255</length>
    <type>Text</type>
</CustomField>