force-app/main/default/objects/Contact/fields/DX_Honsha_Date_0__c.field-meta.xml
<CustomField>
    <fullName>DX_Honsha_Date_0__c</fullName>
    <label>パーセプションLV_決裁者_本社0_BA未認知・無関心_本社_変更日</label>
    <type>Date</type>
</CustomField>