force-app/main/default/objects/Contact/fields/DX_Honsha_Date_10__c.field-meta.xml
<CustomField>
    <fullName>DX_Honsha_Date_10__c</fullName>
    <label>パーセプションLV 決裁者_本社10_野原の提供するサービスを色々な物件で利用し</label>
    <type>Date</type>
</CustomField>