force-app/main/default/objects/Contact/fields/DX_Honsha_Date_1__c.field-meta.xml
<CustomField>
    <fullName>DX_Honsha_Date_1__c</fullName>
    <label>パーセプションLV_決裁者_本社1_BAサービスを理解した_本社_変更日</label>
    <type>Date</type>
</CustomField>