force-app/main/default/objects/Contact/fields/DX_InsideContactDate__c.field-meta.xml
<CustomField>
    <fullName>DX_InsideContactDate__c</fullName>
    <label>社内コンタクト日_DX</label>
    <type>Date</type>
</CustomField>