force-app/main/default/objects/Contact/fields/DX_InsideLead__c.field-meta.xml
<CustomField>
    <fullName>DX_InsideLead__c</fullName>
    <label>社内リード_DX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>