force-app/main/default/objects/Contact/fields/DX_InsideLeadContact__c.field-meta.xml
<CustomField>
    <fullName>DX_InsideLeadContact__c</fullName>
    <label>社内リード連絡_DX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>◯</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>