force-app/main/default/objects/Contact/fields/DX_InsideReminderDate__c.field-meta.xml
<CustomField>
    <fullName>DX_InsideReminderDate__c</fullName>
    <label>社内リマインダー送付日_DX</label>
    <type>Date</type>
</CustomField>