force-app/main/default/objects/Contact/fields/DX_JobCategory__c.field-meta.xml
<CustomField>
    <fullName>DX_JobCategory__c</fullName>
    <label>職種フラグ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIM推</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>企画・営業</fullName>
            </value>
            <value>
                <fullName>経営層</fullName>
            </value>
            <value>
                <fullName>見積・積算</fullName>
            </value>
            <value>
                <fullName>作業所・工務・技術</fullName>
            </value>
            <value>
                <fullName>支店</fullName>
            </value>
            <value>
                <fullName>除外</fullName>
            </value>
            <value>
                <fullName>調達・購買</fullName>
            </value>
            <value>
                <fullName>設計</fullName>
            </value>
            <value>
                <fullName>生産設計</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>