force-app/main/default/objects/Contact/fields/DX_kadaihiaring__c.field-meta.xml
<CustomField>
    <fullName>DX_kadaihiaring__c</fullName>
    <label>課題ヒアリング結果</label>
    <type>TextArea</type>
</CustomField>