force-app/main/default/objects/Contact/fields/DX_Keyman__c.field-meta.xml
<CustomField>
    <fullName>DX_Keyman__c</fullName>
    <inlineHelpText>A：前向きBIM関係者
B：後ろ向きBIM関係者
C：前向きBIM無関係者
D：後ろ向きBIM無関係者</inlineHelpText>
    <label>キーマン_DX</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
                <default>true</default>
                <label>C</label>
            </value>
            <value>
                <fullName>決裁者_本社</fullName>
            </value>
            <value>
                <fullName>決裁者_現場</fullName>
            </value>
            <value>
                <fullName>DX推進者</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>