force-app/main/default/objects/Contact/fields/DX_keymanday__c.field-meta.xml
<CustomField>
    <fullName>DX_keymanday__c</fullName>
    <label>キーマン_DX入力日</label>
    <type>Date</type>
</CustomField>