force-app/main/default/objects/Contact/fields/DX_LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>DX_LastActivityDate__c</fullName>
    <label>最終活動日_DX</label>
    <type>Date</type>
</CustomField>