force-app/main/default/objects/Contact/fields/DX_LV_Last_UpdDate__c.field-meta.xml
<CustomField>
    <fullName>DX_LV_Last_UpdDate__c</fullName>
    <label>パーセプションLV最新変更日</label>
    <type>Date</type>
</CustomField>