force-app/main/default/objects/Contact/fields/DX_M_AcceptAppointment1__c.field-meta.xml
<CustomField>
    <fullName>DX_M_AcceptAppointment1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>M：商談アポイント承諾1_DX</label>
    <type>Checkbox</type>
</CustomField>