force-app/main/default/objects/Contact/fields/DX_M_AcceptAppointment2Date__c.field-meta.xml
<CustomField>
    <fullName>DX_M_AcceptAppointment2Date__c</fullName>
    <label>M：商談アポイント承諾日2_DX</label>
    <type>Date</type>
</CustomField>