force-app/main/default/objects/Contact/fields/DX_ManagementTarget__c.field-meta.xml
<CustomField>
    <fullName>DX_ManagementTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>管理対象_DX</label>
    <type>Checkbox</type>
</CustomField>