force-app/main/default/objects/Contact/fields/DX_MyChargeFlg__c.field-meta.xml
<CustomField>
    <fullName>DX_MyChargeFlg__c</fullName>
    <formula>IF( $User.Id = DX_OwnerId__r.Id ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*私の担当先Flg_DX</label>
    <type>Checkbox</type>
</CustomField>