force-app/main/default/objects/Contact/fields/DX_O_Web__c.field-meta.xml
<CustomField>
    <fullName>DX_O_Web__c</fullName>
    <label>DX_O:Webコラム閲覧日</label>
    <type>Date</type>
</CustomField>