force-app/main/default/objects/Contact/fields/DX_Occupation__c.field-meta.xml
<CustomField>
    <fullName>DX_Occupation__c</fullName>
    <label>旧職種_BuildApp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DX_Occupation</valueSetName>
    </valueSet>
</CustomField>