force-app/main/default/objects/Contact/fields/DX_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>DX_OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先担当者 所有者_DX</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CThqWP</relationshipName>
    <type>Lookup</type>
</CustomField>