force-app/main/default/objects/Contact/fields/DX_PastCareer__c.field-meta.xml
<CustomField>
    <fullName>DX_PastCareer__c</fullName>
    <label>過去のキャリア</label>
    <length>255</length>
    <type>Text</type>
</CustomField>