force-app/main/default/objects/Contact/fields/DX_PerceptionNo__c.field-meta.xml
<CustomField>
    <fullName>DX_PerceptionNo__c</fullName>
    <formula>IF(ISBLANK(TEXT(DX_ScoringIndicators__c))  
									,&apos;&apos;
									,RIGHT(TEXT(DX_ScoringIndicators__c)  , LEN(TEXT(DX_ScoringIndicators__c)) - 2 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>パーセプション№</label>
    <type>Text</type>
</CustomField>