force-app/main/default/objects/Contact/fields/DX_ProposalPolicy__c.field-meta.xml
<CustomField>
    <fullName>DX_ProposalPolicy__c</fullName>
    <label>提案方針</label>
    <type>TextArea</type>
</CustomField>