force-app/main/default/objects/Contact/fields/dx_quip_memo__c.field-meta.xml
<CustomField>
    <fullName>dx_quip_memo__c</fullName>
    <label>組織図メモ</label>
    <type>TextArea</type>
</CustomField>