force-app/main/default/objects/Contact/fields/DX_Reaction__c.field-meta.xml
<CustomField>
    <fullName>DX_Reaction__c</fullName>
    <label>反応欄_DX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>