force-app/main/default/objects/Contact/fields/DX_ReContactDate__c.field-meta.xml
<CustomField>
    <fullName>DX_ReContactDate__c</fullName>
    <label>再コンタクト日_DX</label>
    <type>Date</type>
</CustomField>