force-app/main/default/objects/Contact/fields/DX_RelatedProperty__c.field-meta.xml
<CustomField>
    <fullName>DX_RelatedProperty__c</fullName>
    <label>関わってきた物件情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>