force-app/main/default/objects/Contact/fields/DX_SalesEscalationDate__c.field-meta.xml
<CustomField>
    <fullName>DX_SalesEscalationDate__c</fullName>
    <label>営業エスカレーション日_DX</label>
    <type>Date</type>
</CustomField>