force-app/main/default/objects/Contact/fields/DX_ScoringIndicators__c.field-meta.xml
<CustomField>
    <fullName>DX_ScoringIndicators__c</fullName>
    <label>スコアリング指標</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BuildAppKeyman__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>DX_ScoringIndicators</valueSetName>
    </valueSet>
</CustomField>