force-app/main/default/objects/Contact/fields/DX_source__c.field-meta.xml
<CustomField>
    <fullName>DX_source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildApp</label>
    <type>Checkbox</type>
</CustomField>