force-app/main/default/objects/Contact/fields/DX_Suishin_1__c.field-meta.xml
<CustomField>
    <fullName>DX_Suishin_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>問い合わせを受ける</label>
    <type>Checkbox</type>
</CustomField>