force-app/main/default/objects/Contact/fields/DX_Suishin_3__c.field-meta.xml
<CustomField>
    <fullName>DX_Suishin_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2度目以降のアポイント承諾</label>
    <type>Checkbox</type>
</CustomField>