force-app/main/default/objects/Contact/fields/DX_Suishin_Date_10__c.field-meta.xml
<CustomField>
    <fullName>DX_Suishin_Date_10__c</fullName>
    <label>パーセプションLV DX10_野原の提供するサービスを色々な物件で利用していきた</label>
    <type>Date</type>
</CustomField>