force-app/main/default/objects/Contact/fields/DX_Suishin_Date_1__c.field-meta.xml
<CustomField>
    <fullName>DX_Suishin_Date_1__c</fullName>
    <label>パーセプションLV DX1_BAサービスを理解した_DX_変更日</label>
    <type>Date</type>
</CustomField>