force-app/main/default/objects/Contact/fields/DX_Suishin_Date_2__c.field-meta.xml
<CustomField>
    <fullName>DX_Suishin_Date_2__c</fullName>
    <label>パーセプションLV DX2_興味がありサービスの導入を検討したい_変更日</label>
    <type>Date</type>
</CustomField>