force-app/main/default/objects/Contact/fields/DX_syokaihoumonfollowsinario__c.field-meta.xml
<CustomField>
    <fullName>DX_syokaihoumonfollowsinario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>初回訪問フォローシナリオ</label>
    <type>Checkbox</type>
</CustomField>