force-app/main/default/objects/Contact/fields/EN_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>EN_CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>個社別管理開始ユーザ_EN</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CThxPp</relationshipName>
    <type>Lookup</type>
</CustomField>