force-app/main/default/objects/Contact/fields/EN_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>EN_CreatedDate__c</fullName>
    <label>個社別管理開始日_EN</label>
    <type>DateTime</type>
</CustomField>