force-app/main/default/objects/Contact/fields/en_kankeiLV_sekkei__c.field-meta.xml
<CustomField>
    <fullName>en_kankeiLV_sekkei__c</fullName>
    <label>関係Lv</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LV1</fullName>
            </value>
            <value>
                <fullName>LV2</fullName>
            </value>
            <value>
                <fullName>LV3</fullName>
            </value>
            <value>
                <fullName>LV4</fullName>
            </value>
            <value>
                <fullName>LV5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>