force-app/main/default/objects/Contact/fields/EN_LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>EN_LastActivityDate__c</fullName>
    <label>最終活動日_EN</label>
    <type>Date</type>
</CustomField>