force-app/main/default/objects/Contact/fields/EN_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>EN_LastModifiedDate__c</fullName>
    <label>最終更新日_EN</label>
    <type>DateTime</type>
</CustomField>