force-app/main/default/objects/Contact/fields/EN_Memo__c.field-meta.xml
<CustomField>
    <fullName>EN_Memo__c</fullName>
    <label>特記事項_EN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>