force-app/main/default/objects/Contact/fields/EN_MyDepartmentFlg__c.field-meta.xml
<CustomField>
    <fullName>EN_MyDepartmentFlg__c</fullName>
    <formula>IF( $User.Department= EN_Department__c ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*私の部署Flg_EN</label>
    <type>Checkbox</type>
</CustomField>