force-app/main/default/objects/Contact/fields/en_otoiawasesaki__c.field-meta.xml
<CustomField>
    <fullName>en_otoiawasesaki__c</fullName>
    <label>お問合せ先</label>
    <length>200</length>
    <type>Text</type>
</CustomField>