force-app/main/default/objects/Contact/fields/EN_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>EN_OwnerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>得意先担当者 所有者_EN</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CThqeT</relationshipName>
    <type>Lookup</type>
</CustomField>