force-app/main/default/objects/Contact/fields/en_saisyuhoumonbi__c.field-meta.xml
<CustomField>
    <fullName>en_saisyuhoumonbi__c</fullName>
    <label>最終訪問日_EN</label>
    <type>Date</type>
</CustomField>