force-app/main/default/objects/Contact/fields/EN_source__c.field-meta.xml
<CustomField>
    <fullName>EN_source__c</fullName>
    <defaultValue>false</defaultValue>
    <label>エンジニアリング</label>
    <type>Checkbox</type>
</CustomField>