force-app/main/default/objects/Contact/fields/en_tokkizikou_tokuisakitantousya__c.field-meta.xml
<CustomField>
    <fullName>en_tokkizikou_tokuisakitantousya__c</fullName>
    <label>特記事項</label>
    <type>TextArea</type>
</CustomField>