force-app/main/default/objects/Contact/fields/endDate_awareness__c.field-meta.xml
<CustomField>
    <fullName>endDate_awareness__c</fullName>
    <label>認知施策終了日</label>
    <type>Date</type>
</CustomField>