force-app/main/default/objects/Contact/fields/endDate_enlightenment__c.field-meta.xml
<CustomField>
    <fullName>endDate_enlightenment__c</fullName>
    <label>啓蒙施策終了日</label>
    <type>Date</type>
</CustomField>