force-app/main/default/objects/Contact/fields/esLastEmailResponseDate__c.field-meta.xml
<CustomField>
    <fullName>esLastEmailResponseDate__c</fullName>
    <label>ESメール最終反応日</label>
    <type>Date</type>
</CustomField>