force-app/main/default/objects/Contact/fields/esLastEmailSentDate__c.field-meta.xml
<CustomField>
    <fullName>esLastEmailSentDate__c</fullName>
    <label>ESメール最終送信日</label>
    <type>Date</type>
</CustomField>