force-app/main/default/objects/Contact/fields/Field1sss__c.field-meta.xml
<CustomField>
    <fullName>Field1sss__c</fullName>
    <label>決定権者</label>
    <length>200</length>
    <type>Text</type>
</CustomField>