force-app/main/default/objects/Contact/fields/FillInParam__c.field-meta.xml
<CustomField>
    <fullName>FillInParam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>穴埋め母数</label>
    <type>Checkbox</type>
</CustomField>