force-app/main/default/objects/Contact/fields/FirstTouchCompany__c.field-meta.xml
<CustomField>
    <fullName>FirstTouchCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>カンパニー</label>
    <type>Checkbox</type>
</CustomField>