force-app/main/default/objects/Contact/fields/FirstTouchDX__c.field-meta.xml
<CustomField>
    <fullName>FirstTouchDX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DX/マーケ</label>
    <type>Checkbox</type>
</CustomField>