force-app/main/default/objects/Contact/fields/FLG__c.field-meta.xml
<CustomField>
    <fullName>FLG__c</fullName>
    <label>FLG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BIMデザイン</fullName>
            </value>
            <value>
                <fullName>KM</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
            <value>
                <fullName>部長</fullName>
            </value>
            <value>
                <fullName>課長</fullName>
            </value>
            <value>
                <fullName>派遣社員</fullName>
            </value>
            <value>
                <fullName>センター長</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>