force-app/main/default/objects/Contact/fields/HasOptedOutOfEmailForSales__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOutOfEmailForSales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>メール送信除外(営業用)</label>
    <type>Checkbox</type>
</CustomField>