force-app/main/default/objects/Contact/fields/Hotprofile_ID__c.field-meta.xml
<CustomField>
    <fullName>Hotprofile_ID__c</fullName>
    <label>Hotprofile ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>