force-app/main/default/objects/Contact/fields/ID_18_2__c.field-meta.xml
<CustomField>
    <fullName>ID_18_2__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先担当者ID（18桁）</label>
    <type>Text</type>
</CustomField>