force-app/main/default/objects/Contact/fields/InterviewInterview__c.field-meta.xml
<CustomField>
    <fullName>InterviewInterview__c</fullName>
    <label>面談後判定状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>推進派</fullName>
            </value>
            <value>
                <fullName>やらされ</fullName>
            </value>
            <value>
                <fullName>敵（アンチ）</fullName>
            </value>
            <value>
                <fullName>中立</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>