force-app/main/default/objects/Contact/fields/InterviewStatus__c.field-meta.xml
<CustomField>
    <fullName>InterviewStatus__c</fullName>
    <label>面談状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未面談</fullName>
            </value>
            <value>
                <fullName>面談済</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>