force-app/main/default/objects/Contact/fields/isOptOut_en__c.field-meta.xml
<CustomField>
    <fullName>isOptOut_en__c</fullName>
    <defaultValue>false</defaultValue>
    <label>購読解除flg:【pref】野原エンジニアリング</label>
    <type>Checkbox</type>
</CustomField>