force-app/main/default/objects/Contact/fields/isSurveyResultLogTarget__c.field-meta.xml
<CustomField>
    <fullName>isSurveyResultLogTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>アンケート結果記録対象flg</label>
    <type>Checkbox</type>
</CustomField>