force-app/main/default/objects/Contact/fields/JU_Birthplace__c.field-meta.xml
<CustomField>
    <fullName>JU_Birthplace__c</fullName>
    <label>出身地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>