force-app/main/default/objects/Contact/fields/JU_Characteristic__c.field-meta.xml
<CustomField>
    <fullName>JU_Characteristic__c</fullName>
    <label>その他面談時に気づいた特性</label>
    <length>255</length>
    <type>Text</type>
</CustomField>