force-app/main/default/objects/Contact/fields/JU_CreatedById__c.field-meta.xml
<CustomField>
    <fullName>JU_CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>個社別管理開始ユーザ_JU</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CThqvb</relationshipName>
    <type>Lookup</type>
</CustomField>