force-app/main/default/objects/Contact/fields/JU_Department__c.field-meta.xml
<CustomField>
    <fullName>JU_Department__c</fullName>
    <label>担当部署_JU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>