force-app/main/default/objects/Contact/fields/JU_EasyToGetAppointments__c.field-meta.xml
<CustomField>
    <fullName>JU_EasyToGetAppointments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>アポイントの獲得容易（用事が無くても）</label>
    <type>Checkbox</type>
</CustomField>