force-app/main/default/objects/Contact/fields/JU_Family__c.field-meta.xml
<CustomField>
    <fullName>JU_Family__c</fullName>
    <label>家族構成</label>
    <length>255</length>
    <type>Text</type>
</CustomField>