force-app/main/default/objects/Contact/fields/JU_FinalDecisionHolder__c.field-meta.xml
<CustomField>
    <fullName>JU_FinalDecisionHolder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>最終決定権者</label>
    <type>Checkbox</type>
</CustomField>