force-app/main/default/objects/Contact/fields/JU_FirstQuotePresentation__c.field-meta.xml
<CustomField>
    <fullName>JU_FirstQuotePresentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>初回見積り提示</label>
    <type>Checkbox</type>
</CustomField>