force-app/main/default/objects/Contact/fields/JU_GraduatingSchool__c.field-meta.xml
<CustomField>
    <fullName>JU_GraduatingSchool__c</fullName>
    <label>出身大学</label>
    <length>255</length>
    <type>Text</type>
</CustomField>